--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: CSUR - Cities Skylines Urban Road
-description: Largest road mod ever in Cities: Skylines. Coming soon!
+title: "CSUR - Cities Skylines Urban Road"
+description: "Largest road mod ever in Cities: Skylines. Coming soon!"
