--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
 title: "CSUR - Cities Skylines Urban Road"
-description: "Largest road mod ever in Cities: Skylines. Coming soon!|即将上线"
+description: "Largest road mod ever in Cities: Skylines. | Coming soon \n 《都市：天际线》迄今为止最大道路模组 | 即将上线"
 plugins:
   - jemoji
